fix a note in 1 Kings

--- a/final product/OEBPS/1KI.xhtml
+++ b/final product/OEBPS/1KI.xhtml
@@ -1182,7 +1182,7 @@
 <aside epub:type='footnote' id="FN79"><p class="f"><a class="notebackref" href="#K15_14"><span class="notemark">*</span> 5.14</a>
  <span class="ft">ch. <a href='1KI.xhtml#K14_6'>4. 6</a></span></p></aside>
 <aside epub:type='footnote' id="FN80"><p class="f"><a class="notebackref" href="#K15_18"><span class="notemark">∥</span> 5.18</a>
- <span class="ft">Ezek. <a href='EZK.xhtml#EK27_9'>27. 9</a>.</span></p></aside>
+ <span class="ft">Or, Giblites, as Ezek. <a href='EZK.xhtml#EK27_9'>27. 9</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN81"><p class="f"><a class="notebackref" href="#K16_1"><span class="notemark">*</span> 6.1</a>
  <span class="ft">2 Chr. <a href='2CH.xhtml#R23_1'>3. 1</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN82"><p class="f"><a class="notebackref" href="#K16_1"><span class="notemark">‡</span> 6.1</a>
