--- a/final product/OEBPS/1KI.xhtml
+++ b/final product/OEBPS/1KI.xhtml
@@ -1252,7 +1252,7 @@
 <aside epub:type='footnote' id="FN114"><p class="f"><a class="notebackref" href="#K17_14"><span class="notemark">†</span> 7.14</a>
  <span class="ft">Heb. the son of a widow woman.</span></p></aside>
 <aside epub:type='footnote' id="FN115"><p class="f"><a class="notebackref" href="#K17_15"><span class="notemark">†</span> 7.15</a>
- <span class="ft">Heb. fashional.</span></p></aside>
+ <span class="ft">Heb. fashioned.</span></p></aside>
 <aside epub:type='footnote' id="FN116"><p class="f"><a class="notebackref" href="#K17_21"><span class="notemark">*</span> 7.21</a>
  <span class="ft">2 Chr. <a href='2CH.xhtml#R23_17'>3. 17</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN117"><p class="f"><a class="notebackref" href="#K17_21"><span class="notemark">∥</span> 7.21</a>
@@ -1410,7 +1410,7 @@
 <aside epub:type='footnote' id="FN193"><p class="f"><a class="notebackref" href="#K110_19"><span class="notemark">†</span> 10.19</a>
  <span class="ft">Heb. on the hinder part thereof.</span></p></aside>
 <aside epub:type='footnote' id="FN194"><p class="f"><a class="notebackref" href="#K110_19"><span class="notemark">†</span> 10.19</a>
- <span class="ft">Heb. kands.</span></p></aside>
+ <span class="ft">Heb. hands.</span></p></aside>
 <aside epub:type='footnote' id="FN195"><p class="f"><a class="notebackref" href="#K110_20"><span class="notemark">†</span> 10.20</a>
  <span class="ft">Heb. so.</span></p></aside>
 <aside epub:type='footnote' id="FN196"><p class="f"><a class="notebackref" href="#K110_21"><span class="notemark">∥</span> 10.21</a>
@@ -1472,7 +1472,7 @@
 <aside epub:type='footnote' id="FN224"><p class="f"><a class="notebackref" href="#K111_42"><span class="notemark">†</span> 11.42</a>
  <span class="ft">Heb. days.</span></p></aside>
 <aside epub:type='footnote' id="FN225"><p class="f"><a class="notebackref" href="#K111_42"><span class="notemark">*</span> 11.42</a>
- <span class="ft">2 Chr. <a href='2CH.xhtml#R29_80'>9. 80</a>.</span></p></aside>
+ <span class="ft">2 Chr. <a href='2CH.xhtml#R29_30'>9. 30</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN226"><p class="f"><a class="notebackref" href="#K111_43"><span class="notemark">*</span> 11.43</a>
  <span class="ft">Matt. <a href='MAT.xhtml#MT1_7'>1. 7</a>, called Roboam.</span></p></aside>
 <aside epub:type='footnote' id="FN227"><p class="f"><a class="notebackref" href="#K112_1"><span class="notemark">*</span> 12.1</a>
