fixing some notes

--- a/final product/OEBPS/2KI.xhtml
+++ b/final product/OEBPS/2KI.xhtml
@@ -724,10 +724,10 @@
 <span class="verse" id="K219_20">20&#160;</span>¶ Then Isaiah the son of Amoz sent to Hezekiah, saying, Thus saith the <span class='nd'>LORD</span> God of Israel, <span class='add'>That</span> which thou hast prayed to me against Sennacherib king of Assyria I have heard.
 <span class="verse" id="K219_21">21&#160;</span>This <span class='add'>is</span> the word that the <span class='nd'>LORD</span> hath spoken concerning him; The virgin the daughter of Zion hath despised thee, <span class='add'>and</span> laughed thee to scorn; the daughter of Jerusalem hath shaken her head at thee.
 <span class="verse" id="K219_22">22&#160;</span> Whom hast thou reproached and blasphemed? and against whom hast thou exalted <span class='add'>thy</span> voice, and lifted up thine eyes on high? <span class='add'>even</span> against the Holy <span class='add'>One</span> of Israel.
-<span class="verse" id="K219_23">23&#160;</span><a href='#FN220' epub:type='noteref' class='noteref'>†</a> By thy messengers thou hast reproached the Lord, and hast said, With the multitude of my chariots I am come up to the height of the mountains, to the sides of Lebanon, and will cut down <a href='#FN221' epub:type='noteref' class='noteref'>†</a>the tall cedar trees thereof, <span class='add'>and</span> the choice fir trees thereof: and I will enter into the lodgings of his borders, <span class='add'>and into</span> the forest of his Carmel.
-<span class="verse" id="K219_24">24&#160;</span> I have digged and drunk strange waters, and with the sole of my feet have I dried up all the rivers of <a href='#FN222' epub:type='noteref' class='noteref'>∥</a>besieged places.
-<span class="verse" id="K219_25">25&#160;</span><a href='#FN223' epub:type='noteref' class='noteref'>∥</a> Hast thou not heard long ago <span class='add'>how</span> I have done it, <span class='add'>and</span> of ancient times that I have formed it? now have I brought it to pass, that thou shouldest be to lay waste fenced cities <span class='add'>into</span> ruinous heaps.
-<span class="verse" id="K219_26">26&#160;</span><a href='#FN224' epub:type='noteref' class='noteref'>∥</a> Therefore their inhabitants were <a href='#FN225' epub:type='noteref' class='noteref'>†</a>of small power, they were dismayed and confounded; they were <span class='add'>as</span> the grass of the field, and <span class='add'>as</span> the green herb, <span class='add'>as</span> the grass on the housetops, and <span class='add'>as corn</span> blasted before it be grown up.
+<span class="verse" id="K219_23">23&#160;</span><a href='#FN220' epub:type='noteref' class='noteref'>†</a> By thy messengers thou hast reproached the Lord, and hast said, With the multitude of my chariots I am come up to the height of the mountains, to the sides of Lebanon, and will cut down <a href='#FN221' epub:type='noteref' class='noteref'>†</a>the tall cedar trees thereof, <span class='add'>and</span> the choice fir trees thereof: and I will enter into the lodgings of his borders, <span class='add'>and into</span> <a href='#FN222' epub:type='noteref' class='noteref'>∥</a>the forest of his Carmel.
+<span class="verse" id="K219_24">24&#160;</span> I have digged and drunk strange waters, and with the sole of my feet have I dried up all the rivers of <a href='#FN223' epub:type='noteref' class='noteref'>∥</a>besieged places.
+<span class="verse" id="K219_25">25&#160;</span><a href='#FN224' epub:type='noteref' class='noteref'>∥</a> Hast thou not heard long ago <span class='add'>how</span> I have done it, <span class='add'>and</span> of ancient times that I have formed it? now have I brought it to pass, that thou shouldest be to lay waste fenced cities <span class='add'>into</span> ruinous heaps.
+<span class="verse" id="K219_26">26&#160;</span> Therefore their inhabitants were <a href='#FN225' epub:type='noteref' class='noteref'>†</a>of small power, they were dismayed and confounded; they were <span class='add'>as</span> the grass of the field, and <span class='add'>as</span> the green herb, <span class='add'>as</span> the grass on the housetops, and <span class='add'>as corn</span> blasted before it be grown up.
 <span class="verse" id="K219_27">27&#160;</span> But I know thy <a href='#FN226' epub:type='noteref' class='noteref'>∥</a>abode, and thy going out, and thy coming in, and thy rage against me.
 <span class="verse" id="K219_28">28&#160;</span> Because thy rage against me and thy tumult is come up into mine ears, therefore I will put my hook in thy nose, and my bridle in thy lips, and I will turn thee back by the way by which thou camest.
 <span class="verse" id="K219_29">29&#160;</span>And this <span class='add'>shall be</span> a sign unto thee, Ye shall eat this year such things as grow of themselves, and in the second year that which springeth of the same; and in the third year sow ye, and reap, and plant vineyards, and eat the fruits thereof.
@@ -762,8 +762,8 @@
 <span class="verse" id="K220_15">15&#160;</span> And he said, What have they seen in thine house? And Hezekiah answered, All <span class='add'>the things</span> that <span class='add'>are</span> in mine house have they seen: there is nothing among my treasures that I have not shewed them.
 <span class="verse" id="K220_16">16&#160;</span> And Isaiah said unto Hezekiah, Hear the word of the <span class='nd'>LORD</span>.
 <span class="verse" id="K220_17">17&#160;</span> Behold, the days come, that all that <span class='add'>is</span> in thine house, and that which thy fathers have laid up in store unto this day, <a href='#FN242' epub:type='noteref' class='noteref'>*</a>shall be carried <a href='#FN243' epub:type='noteref' class='noteref'>‡</a>into Babylon: nothing shall be left, saith the <span class='nd'>LORD</span>.
-<span class="verse" id="K220_18">18&#160;</span><a href='#FN244' epub:type='noteref' class='noteref'>∥</a> And of thy sons that shall issue from thee, which thou shalt beget, shall they take away; and they shall be eunuchs in the palace of the king of Babylon.
-<span class="verse" id="K220_19">19&#160;</span> Then said Hezekiah unto Isaiah, Good <span class='add'>is</span> the word of the <span class='nd'>LORD</span> which thou hast spoken. And he said, <span class='add'>Is it</span> not <span class='add'>good</span>, if peace and truth be in my days?</div>
+<span class="verse" id="K220_18">18&#160;</span> And of thy sons that shall issue from thee, which thou shalt beget, shall they take away; and they shall be eunuchs in the palace of the king of Babylon.
+<span class="verse" id="K220_19">19&#160;</span> Then said Hezekiah unto Isaiah, Good <span class='add'>is</span> the word of the <span class='nd'>LORD</span> which thou hast spoken. And he said, <a href='#FN244' epub:type='noteref' class='noteref'>∥</a><span class='add'>Is it</span> not <span class='add'>good</span>, if peace and truth be in my days?</div>
 <div class='p'>
 <span class="verse" id="K220_20">20&#160;</span>¶ And the rest of the acts of Hezekiah, and all his might, and how he made a pool, and a conduit, and brought water into the city, <span class='add'>are</span> they not written in the book of the chronicles of the kings of Judah?
 <span class="verse" id="K220_21">21&#160;</span> And Hezekiah slept with his fathers: and Manasseh his son reigned in his stead.  </div>
@@ -833,8 +833,8 @@
 <span class="verse" id="K223_3">3&#160;</span>¶ And the king stood by a pillar, and made a covenant before the <span class='nd'>LORD</span>, to walk after the <span class='nd'>LORD</span>, and to keep his commandments and his testimonies and his statutes with all <span class='add'>their</span> heart and all <span class='add'>their</span> soul, to perform the words of this covenant that were written in this book. And all the people stood to the covenant. </div>
 <div class='p'>
 <span class="verse" id="K223_4">4&#160;</span> And the king commanded Hilkiah the high priest, and the priests of the second order, and the keepers of the door, to bring forth out of the temple of the <span class='nd'>LORD</span> all the vessels that were made for Baal, and for the grove, and for all the host of heaven: and he burned them without Jerusalem in the fields of Kidron, and carried the ashes of them unto Beth-el.
-<span class="verse" id="K223_5">5&#160;</span> And he <a href='#FN265' epub:type='noteref' class='noteref'>†</a>put down <a href='#FN266' epub:type='noteref' class='noteref'>†</a>the idolatrous priests, whom the kings of Judah had ordained to burn incense in the high places in the cities of Judah, and in the places round about Jerusalem; them also that burned incense unto Baal, to the sun, and to the moon, and to the planets, and to all the host of heaven.
-<span class="verse" id="K223_6">6&#160;</span><a href='#FN267' epub:type='noteref' class='noteref'>∥</a> And he brought out the <a href='#FN268' epub:type='noteref' class='noteref'>*</a>grove from the house of the <span class='nd'>LORD</span>, without Jerusalem, unto the brook Kidron, and burned it at the brook Kidron, and stamped <span class='add'>it</span> small to powder, and cast the powder thereof upon the graves of the children of the people.
+<span class="verse" id="K223_5">5&#160;</span> And he <a href='#FN265' epub:type='noteref' class='noteref'>†</a>put down <a href='#FN266' epub:type='noteref' class='noteref'>†</a>the idolatrous priests, whom the kings of Judah had ordained to burn incense in the high places in the cities of Judah, and in the places round about Jerusalem; them also that burned incense unto Baal, to the sun, and to the moon, and to the <a href='#FN267' epub:type='noteref' class='noteref'>∥</a>planets, and to all the host of heaven.
+<span class="verse" id="K223_6">6&#160;</span> And he brought out the <a href='#FN268' epub:type='noteref' class='noteref'>*</a>grove from the house of the <span class='nd'>LORD</span>, without Jerusalem, unto the brook Kidron, and burned it at the brook Kidron, and stamped <span class='add'>it</span> small to powder, and cast the powder thereof upon the graves of the children of the people.
 <span class="verse" id="K223_7">7&#160;</span> And he brake down the houses of the sodomites, that <span class='add'>were</span> by the house of the <span class='nd'>LORD</span>, where the women wove <a href='#FN269' epub:type='noteref' class='noteref'>†</a>hangings for the grove.
 <span class="verse" id="K223_8">8&#160;</span> And he brought all the priests out of the cities of Judah, and defiled the high places where the priests had burned incense, from Geba to Beer-sheba, and brake down the high places of the gates that <span class='add'>were</span> in the entering in of the gate of Joshua the governor of the city, which <span class='add'>were</span> on a man’s left hand at the gate of the city.
 <span class="verse" id="K223_9">9&#160;</span> Nevertheless the priests of the high places came not up to the altar of the <span class='nd'>LORD</span> in Jerusalem, but they did eat of the unleavened bread among their brethren.
@@ -1321,7 +1321,7 @@
 <aside epub:type='footnote' id="FN191"><p class="f"><a class="notebackref" href="#K217_35"><span class="notemark">*</span> 17.35</a>
  <span class="ft">Judg. <a href='JDG.xhtml#JG6_10'>6. 10</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN192"><p class="f"><a class="notebackref" href="#K218_1"><span class="notemark">*</span> 18.1</a>
- <span class="ft">2 Chr. <a href='2CH.xhtml#R228_27'>28. 27</a>. &amp;c <a href='2CH.xhtml#R229_1'>29. 1</a>. He is called Ezekias, <a href='EZK.xhtml#EK_1'>Matt. 1</a>. <a href='EZK.xhtml#EK9_0'>9.</a></span></p></aside>
+ <span class="ft">2 Chr. <a href='2CH.xhtml#R228_27'>28. 27</a>. &amp;c <a href='2CH.xhtml#R229_1'>29. 1</a>. He is called Ezekias, Matt. <a href='MAT.xhtml#MT1_9'>1. 9.</a></span></p></aside>
 <aside epub:type='footnote' id="FN193"><p class="f"><a class="notebackref" href="#K218_4"><span class="notemark">†</span> 18.4</a>
  <span class="ft">Heb. statues.</span></p></aside>
 <aside epub:type='footnote' id="FN194"><p class="f"><a class="notebackref" href="#K218_4"><span class="notemark">*</span> 18.4</a>
@@ -1347,7 +1347,7 @@
 <aside epub:type='footnote' id="FN204"><p class="f"><a class="notebackref" href="#K218_18"><span class="notemark">∥</span> 18.18</a>
  <span class="ft">Or, secretary.</span></p></aside>
 <aside epub:type='footnote' id="FN205"><p class="f"><a class="notebackref" href="#K218_20"><span class="notemark">∥</span> 18.20</a>
- <span class="ft">Or, taikest.</span></p></aside>
+ <span class="ft">Or, talkest.</span></p></aside>
 <aside epub:type='footnote' id="FN206"><p class="f"><a class="notebackref" href="#K218_20"><span class="notemark">†</span> 18.20</a>
  <span class="ft">Heb. word of the lips.</span></p></aside>
 <aside epub:type='footnote' id="FN207"><p class="f"><a class="notebackref" href="#K218_20"><span class="notemark">∥</span> 18.20</a>
@@ -1380,11 +1380,11 @@
  <span class="ft">Heb. By the hand of.</span></p></aside>
 <aside epub:type='footnote' id="FN221"><p class="f"><a class="notebackref" href="#K219_23"><span class="notemark">†</span> 19.23</a>
  <span class="ft">Heb. the tallness, &amp;c.</span></p></aside>
-<aside epub:type='footnote' id="FN222"><p class="f"><a class="notebackref" href="#K219_24"><span class="notemark">∥</span> 19.24</a>
+<aside epub:type='footnote' id="FN222"><p class="f"><a class="notebackref" href="#K219_23"><span class="notemark">∥</span> 19.23</a>
  <span class="ft">Or, the forest and his fruitful field.</span></p></aside>
-<aside epub:type='footnote' id="FN223"><p class="f"><a class="notebackref" href="#K219_25"><span class="notemark">∥</span> 19.25</a>
+<aside epub:type='footnote' id="FN223"><p class="f"><a class="notebackref" href="#K219_24"><span class="notemark">∥</span> 19.24</a>
  <span class="ft">Or, fenced.</span></p></aside>
-<aside epub:type='footnote' id="FN224"><p class="f"><a class="notebackref" href="#K219_26"><span class="notemark">∥</span> 19.26</a>
+<aside epub:type='footnote' id="FN224"><p class="f"><a class="notebackref" href="#K219_25"><span class="notemark">∥</span> 19.25</a>
  <span class="ft">Or, Hast thou not heard how I have made it long ago, and formed it of ancient times? should I now bring it to be laid waste, and fenced cities to be rumous heaps?</span></p></aside>
 <aside epub:type='footnote' id="FN225"><p class="f"><a class="notebackref" href="#K219_26"><span class="notemark">†</span> 19.26</a>
  <span class="ft">Heb. short of hand.</span></p></aside>
@@ -1395,7 +1395,7 @@
 <aside epub:type='footnote' id="FN228"><p class="f"><a class="notebackref" href="#K219_31"><span class="notemark">†</span> 19.31</a>
  <span class="ft">Heb. the escaping.</span></p></aside>
 <aside epub:type='footnote' id="FN229"><p class="f"><a class="notebackref" href="#K219_35"><span class="notemark">*</span> 19.35</a>
- <span class="ft">Is. <a href='ISA.xhtml#IS37_36'>37. 36</a>. Tob. <a href='TOB.xhtml#TB1_21'>1. 21</a>. Ecclus. <a href='SIR.xhtml#SR48_21'>48 21</a> 1 Mac. <a href='1MA.xhtml#M17_41'>7 41</a>. 2 Mac. <a href='2MA.xhtml#M28_19'>8. 19</a>.</span></p></aside>
+ <span class="ft">Is. <a href='ISA.xhtml#IS37_36'>37. 36</a>. Tob. <a href='TOB.xhtml#TB1_21'>1. 21</a>. Ecclus. <a href='SIR.xhtml#SR48_24'>48 24</a> 1 Mac. <a href='1MA.xhtml#M17_41'>7 41</a>. 2 Mac. <a href='2MA.xhtml#M28_19'>8. 19</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN230"><p class="f"><a class="notebackref" href="#K219_37"><span class="notemark">†</span> 19.37</a>
  <span class="ft">Heb. Ararat.</span></p></aside>
 <aside epub:type='footnote' id="FN231"><p class="f"><a class="notebackref" href="#K220_1"><span class="notemark">*</span> 20.1</a>
@@ -1424,7 +1424,7 @@
  <span class="ft">ch. <a href='2KI.xhtml#K224_13'>24. 13</a>. &amp;c <a href='2KI.xhtml#K225_13'>25. 13</a>. Jer. <a href='JER.xhtml#JR27_19'>27. 19</a></span></p></aside>
 <aside epub:type='footnote' id="FN243"><p class="f"><a class="notebackref" href="#K220_17"><span class="notemark">‡</span> 20.17</a>
  <span class="ft">[1611 unto]</span></p></aside>
-<aside epub:type='footnote' id="FN244"><p class="f"><a class="notebackref" href="#K220_18"><span class="notemark">∥</span> 20.18</a>
+<aside epub:type='footnote' id="FN244"><p class="f"><a class="notebackref" href="#K220_19"><span class="notemark">∥</span> 20.19</a>
  <span class="ft">Or, Shall there not be peace and truth, &amp;c.</span></p></aside>
 <aside epub:type='footnote' id="FN245"><p class="f"><a class="notebackref" href="#K221_1"><span class="notemark">*</span> 21.1</a>
  <span class="ft">2 Chr. <a href='2CH.xhtml#R233_1'>33. 1</a>.</span></p></aside>
@@ -1470,7 +1470,7 @@
  <span class="ft">Heb. caused to cease.</span></p></aside>
 <aside epub:type='footnote' id="FN266"><p class="f"><a class="notebackref" href="#K223_5"><span class="notemark">†</span> 23.5</a>
  <span class="ft">Heb. Chemarim.</span></p></aside>
-<aside epub:type='footnote' id="FN267"><p class="f"><a class="notebackref" href="#K223_6"><span class="notemark">∥</span> 23.6</a>
+<aside epub:type='footnote' id="FN267"><p class="f"><a class="notebackref" href="#K223_5"><span class="notemark">∥</span> 23.5</a>
  <span class="ft">Or, twelve signs, or, constellations.</span></p></aside>
 <aside epub:type='footnote' id="FN268"><p class="f"><a class="notebackref" href="#K223_6"><span class="notemark">*</span> 23.6</a>
  <span class="ft">ch. <a href='2KI.xhtml#K221_7'>21. 7</a>.</span></p></aside>
@@ -1515,7 +1515,7 @@
 <aside epub:type='footnote' id="FN288"><p class="f"><a class="notebackref" href="#K223_33"><span class="notemark">∥</span> 23.33</a>
  <span class="ft">Or, because he reigned.</span></p></aside>
 <aside epub:type='footnote' id="FN289"><p class="f"><a class="notebackref" href="#K223_33"><span class="notemark">†</span> 23.33</a>
- <span class="ft">Heb set a mulet upon the land.</span></p></aside>
+ <span class="ft">Heb. set a mulct upon the land.</span></p></aside>
 <aside epub:type='footnote' id="FN290"><p class="f"><a class="notebackref" href="#K223_34"><span class="notemark">*</span> 23.34</a>
  <span class="ft">Matt. <a href='MAT.xhtml#MT1_11'>1 11</a>, called Jakim.</span></p></aside>
 <aside epub:type='footnote' id="FN291"><p class="f"><a class="notebackref" href="#K223_36"><span class="notemark">‡</span> 23.36</a>
@@ -1539,7 +1539,7 @@
 <aside epub:type='footnote' id="FN300"><p class="f"><a class="notebackref" href="#K224_15"><span class="notemark">∥</span> 24.15</a>
  <span class="ft">Or, eunuchs.</span></p></aside>
 <aside epub:type='footnote' id="FN301"><p class="f"><a class="notebackref" href="#K224_17"><span class="notemark">*</span> 24.17</a>
- <span class="ft">Jer. <a href='JER.xhtml#JR37_1'>37 1</a>. &amp;c <a href='JER.xhtml#JR53_1'>53. 1</a>.</span></p></aside>
+ <span class="ft">Jer. <a href='JER.xhtml#JR37_1'>37 1</a>. &amp;c <a href='JER.xhtml#JR52_1'>52. 1</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN302"><p class="f"><a class="notebackref" href="#K225_1"><span class="notemark">*</span> 25.1</a>
  <span class="ft">Jer. <a href='JER.xhtml#JR89_1'>89. 1</a>. &amp;c <a href='JER.xhtml#JR52_4'>52. 4</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN303"><p class="f"><a class="notebackref" href="#K225_3"><span class="notemark">*</span> 25.3</a>
