go through some proofread notes

--- a/final product/OEBPS/1CH.xhtml
+++ b/final product/OEBPS/1CH.xhtml
@@ -986,7 +986,7 @@
 <span class="verse" id="R125_2">2&#160;</span> Of the sons of Asaph; Zaccur, and Joseph, and Nethaniah, and <a href='#FN404' epub:type='noteref' class='noteref'>*</a>Asarelah, the sons of Asaph under the hands of Asaph, which prophesied <a href='#FN405' epub:type='noteref' class='noteref'>†</a>according to the order of the king.
 <span class="verse" id="R125_3">3&#160;</span> Of Jeduthun: the sons of Jeduthun; Gedaliah, and <a href='#FN406' epub:type='noteref' class='noteref'>∥</a>Zeri, and Jeshaiah, Hashabiah, and Mattithiah, <a href='#FN407' epub:type='noteref' class='noteref'>*</a>six, under the hands of their father Jeduthun, who prophesied with a harp, to give thanks and to praise the <span class='nd'>LORD</span>.
 <span class="verse" id="R125_4">4&#160;</span> Of Heman: the sons of Heman; Bukkiah, Mattaniah, <a href='#FN408' epub:type='noteref' class='noteref'>∥</a>Uzziel, <a href='#FN409' epub:type='noteref' class='noteref'>∥</a>Shebuel, and Jerimoth, Hananiah, Hanani, Eliathah, Giddalti, and Romamti-ezer, Joshbekashah, Mallothi, Hothir, <span class='add'>and</span> Mahazioth:
-<span class="verse" id="R125_5">5&#160;</span><a href='#FN410' epub:type='noteref' class='noteref'>∥</a>All these <span class='add'>were</span> the sons of Heman the king’s seer in the words of God, to lift up the horn. And God gave to Heman fourteen sons and three daughters.
+<span class="verse" id="R125_5">5&#160;</span>All these <span class='add'>were</span> the sons of Heman the king’s seer in the <a href='#FN410' epub:type='noteref' class='noteref'>∥</a>words of God, to lift up the horn. And God gave to Heman fourteen sons and three daughters.
 <span class="verse" id="R125_6">6&#160;</span>All these <span class='add'>were</span> under the hands of their father for song <span class='add'>in</span> the house of the <span class='nd'>LORD</span>, with cymbals, psalteries, and harps, for the service of the house of God, <a href='#FN411' epub:type='noteref' class='noteref'>†</a>according to the king’s order to Asaph, Jeduthun, and Heman.
 <span class="verse" id="R125_7">7&#160;</span> So the number of them, with their brethren that were instructed in the songs of the <span class='nd'>LORD</span>, <span class='add'>even</span> all that were cunning, was two hundred fourscore and eight. </div>
 <div class='p'>
@@ -1184,13 +1184,13 @@
 <aside epub:type='footnote' id="FN15"><p class="f"><a class="notebackref" href="#R11_28"><span class="notemark">*</span> 1.28</a>
  <span class="ft">Gen. <a href='GEN.xhtml#GN16_11'>16. 11</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN16"><p class="f"><a class="notebackref" href="#R11_29"><span class="notemark">*</span> 1.29</a>
- <span class="ft">Gen. <a href='GEN.xhtml#GN25_13'>25. 13</a> to <a href='GEN.xhtml#GN17_0'>17.</a></span></p></aside>
+ <span class="ft">Gen. <a href='GEN.xhtml#GN25_13'>25. 13</a> to <a href='GEN.xhtml#GN25_17'>17.</a></span></p></aside>
 <aside epub:type='footnote' id="FN17"><p class="f"><a class="notebackref" href="#R11_30"><span class="notemark">∥</span> 1.30</a>
  <span class="ft">Gen. <a href='GEN.xhtml#GN25_14'>25. 14</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN18"><p class="f"><a class="notebackref" href="#R11_35"><span class="notemark">*</span> 1.35</a>
  <span class="ft">Gen. 36. <a href='GEN.xhtml#GN36_9'>9</a>, <a href='GEN.xhtml#GN36_10'>10</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN19"><p class="f"><a class="notebackref" href="#R11_36"><span class="notemark">∥</span> 1.36</a>
- <span class="ft">Zepho, <a href='ZEP.xhtml#ZP_36'>Gen. 36</a>. <a href='ZEP.xhtml#ZP12_0'>12.</a></span></p></aside>
+ <span class="ft">Zepho, <a href='GEN.xhtml#GN36_12'>Gen. 36. 12.</a></span></p></aside>
 <aside epub:type='footnote' id="FN20"><p class="f"><a class="notebackref" href="#R11_39"><span class="notemark">∥</span> 1.39</a>
  <span class="ft">Gen. <a href='GEN.xhtml#GN36_22'>36. 22</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN21"><p class="f"><a class="notebackref" href="#R11_40"><span class="notemark">∥</span> 1.40</a>
@@ -1216,7 +1216,7 @@
 <aside epub:type='footnote' id="FN31"><p class="f"><a class="notebackref" href="#R12_1"><span class="notemark">∥</span> 2.1</a>
  <span class="ft">Or, Jacob.</span></p></aside>
 <aside epub:type='footnote' id="FN32"><p class="f"><a class="notebackref" href="#R12_1"><span class="notemark">*</span> 2.1</a>
- <span class="ft">Gen. <a href='GEN.xhtml#GN29_32'>29. 32</a>. &amp;c <a href='GEN.xhtml#GN30_5'>30. 5</a>. &amp;c 85. <a href='GEN.xhtml#GN85_18'>18</a>, <a href='GEN.xhtml#GN85_22'>22</a>. &amp;c <a href='GEN.xhtml#GN46_8'>46. 8</a>, &amp;c.</span></p></aside>
+ <span class="ft">Gen. <a href='GEN.xhtml#GN29_32'>29. 32</a>. &amp;c <a href='GEN.xhtml#GN30_5'>30. 5</a>. &amp;c 35. <a href='GEN.xhtml#GN35_18'>18</a>, <a href='GEN.xhtml#GN35_22'>22</a>. &amp;c <a href='GEN.xhtml#GN46_8'>46. 8</a>, &amp;c.</span></p></aside>
 <aside epub:type='footnote' id="FN33"><p class="f"><a class="notebackref" href="#R12_3"><span class="notemark">*</span> 2.3</a>
  <span class="ft">Gen. <a href='GEN.xhtml#GN38_3'>38 3</a>. &amp;c <a href='GEN.xhtml#GN46_12'>46. 12</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN34"><p class="f"><a class="notebackref" href="#R12_3"><span class="notemark">*</span> 2.3</a>
@@ -1300,7 +1300,7 @@
 <aside epub:type='footnote' id="FN73"><p class="f"><a class="notebackref" href="#R13_15"><span class="notemark">∥</span> 3.15</a>
  <span class="ft">2 Kings <a href='2KI.xhtml#K223_34'>23. 34</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN74"><p class="f"><a class="notebackref" href="#R13_15"><span class="notemark">∥</span> 3.15</a>
- <span class="ft">Mattaniah, <a href='MAT.xhtml#MT2_24'>2 Kings 24</a>. <a href='MAT.xhtml#MT17_0'>17.</a></span></p></aside>
+ <span class="ft">Mattaniah, 2 Kings <a href='2KI.xhtml#K224_17'>24. 17.</a></span></p></aside>
 <aside epub:type='footnote' id="FN75"><p class="f"><a class="notebackref" href="#R13_16"><span class="notemark">*</span> 3.16</a>
  <span class="ft">Matt. <a href='MAT.xhtml#MT1_11'>1. 11</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN76"><p class="f"><a class="notebackref" href="#R13_16"><span class="notemark">∥</span> 3.16</a>
@@ -1434,7 +1434,7 @@
 <aside epub:type='footnote' id="FN140"><p class="f"><a class="notebackref" href="#R16_20"><span class="notemark">*</span> 6.20</a>
  <span class="ft">ver. <a href='1CH.xhtml#R16_42'>42.</a></span></p></aside>
 <aside epub:type='footnote' id="FN141"><p class="f"><a class="notebackref" href="#R16_21"><span class="notemark">∥</span> 6.21</a>
- <span class="ft">ver. <a href='1CH.xhtml#R16_42'>42.</a></span></p></aside>
+ <span class="ft">ver. <a href='1CH.xhtml#R16_2'>2.</a></span></p></aside>
 <aside epub:type='footnote' id="FN142"><p class="f"><a class="notebackref" href="#R16_21"><span class="notemark">∥</span> 6.21</a>
  <span class="ft">ver. <a href='1CH.xhtml#R16_41'>41.</a></span></p></aside>
 <aside epub:type='footnote' id="FN143"><p class="f"><a class="notebackref" href="#R16_22"><span class="notemark">∥</span> 6.22</a>
@@ -1444,7 +1444,7 @@
 <aside epub:type='footnote' id="FN145"><p class="f"><a class="notebackref" href="#R16_26"><span class="notemark">∥</span> 6.26</a>
  <span class="ft">1 Sam. <a href='1SA.xhtml#S11_1'>1. 1</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN146"><p class="f"><a class="notebackref" href="#R16_28"><span class="notemark">*</span> 6.28</a>
- <span class="ft">Joel, <a href='JOL.xhtml#JL_0'>ver </a><a href='JOL.xhtml#JL33_0'>33</a> &amp;c 1 Sam. <a href='1SA.xhtml#S18_2'>8. 2</a>.</span></p></aside>
+ <span class="ft">Joel, ver <a href='1CH.xhtml#R16_33'>33</a> &amp;c 1 Sam. <a href='1SA.xhtml#S18_2'>8. 2</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN147"><p class="f"><a class="notebackref" href="#R16_31"><span class="notemark">*</span> 6.31</a>
  <span class="ft">ch. <a href='1CH.xhtml#R116_1'>16. 1</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN148"><p class="f"><a class="notebackref" href="#R16_33"><span class="notemark">†</span> 6.33</a>
@@ -1508,7 +1508,7 @@
 <aside epub:type='footnote' id="FN177"><p class="f"><a class="notebackref" href="#R18_5"><span class="notemark">∥</span> 8.5</a>
  <span class="ft">Num. <a href='NUM.xhtml#NU26_39'>26. 39</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN178"><p class="f"><a class="notebackref" href="#R18_6"><span class="notemark">*</span> 8.6</a>
- <span class="ft">ch. <a href='1CH.xhtml#R12_32'>2. 32</a>.</span></p></aside>
+ <span class="ft">ch. <a href='1CH.xhtml#R12_52'>2. 52</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN179"><p class="f"><a class="notebackref" href="#R18_21"><span class="notemark">∥</span> 8.21</a>
  <span class="ft">ver. <a href='1CH.xhtml#R18_13'>13.</a></span></p></aside>
 <aside epub:type='footnote' id="FN180"><p class="f"><a class="notebackref" href="#R18_29"><span class="notemark">*</span> 8.29</a>
@@ -1516,13 +1516,13 @@
 <aside epub:type='footnote' id="FN181"><p class="f"><a class="notebackref" href="#R18_29"><span class="notemark">*</span> 8.29</a>
  <span class="ft">ch. <a href='1CH.xhtml#R19_35'>9. 35</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN182"><p class="f"><a class="notebackref" href="#R18_31"><span class="notemark">∥</span> 8.31</a>
- <span class="ft">Zechariah, <a href='ZEC.xhtml#ZC_9'>ch. 9</a>. <a href='ZEC.xhtml#ZC37_0'>37.</a></span></p></aside>
+ <span class="ft">Zechariah, ch. <a href='1CH.xhtml#R19_37'>9. 37.</a></span></p></aside>
 <aside epub:type='footnote' id="FN183"><p class="f"><a class="notebackref" href="#R18_32"><span class="notemark">∥</span> 8.32</a>
  <span class="ft">ch. <a href='1CH.xhtml#R19_38'>9. 38</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN184"><p class="f"><a class="notebackref" href="#R18_33"><span class="notemark">*</span> 8.33</a>
  <span class="ft">1 Sam. <a href='1SA.xhtml#S114_51'>14. 51</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN185"><p class="f"><a class="notebackref" href="#R18_33"><span class="notemark">∥</span> 8.33</a>
- <span class="ft">Ishbosheth, <a href='ISA.xhtml#IS2_2'>2 Sam. 2</a>. <a href='ISA.xhtml#IS8_0'>8.</a></span></p></aside>
+ <span class="ft">Ishbosheth, 2 Sam. <a href='2SA.xhtml#S22_8'>2. 8.</a></span></p></aside>
 <aside epub:type='footnote' id="FN186"><p class="f"><a class="notebackref" href="#R18_34"><span class="notemark">∥</span> 8.34</a>
  <span class="ft">2 Sam. <a href='2SA.xhtml#S24_4'>4. 4</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN187"><p class="f"><a class="notebackref" href="#R18_35"><span class="notemark">∥</span> 8.35</a>
@@ -1566,7 +1566,7 @@
 <aside epub:type='footnote' id="FN206"><p class="f"><a class="notebackref" href="#R110_1"><span class="notemark">∥</span> 10.1</a>
  <span class="ft">Or, wounded.</span></p></aside>
 <aside epub:type='footnote' id="FN207"><p class="f"><a class="notebackref" href="#R110_2"><span class="notemark">∥</span> 10.2</a>
- <span class="ft">Ishui, <a href='ISA.xhtml#IS1_14'>1 Sam. 14</a>. <a href='ISA.xhtml#IS49_0'>49.</a></span></p></aside>
+ <span class="ft">Ishui, 1 Sam. <a href='1SA.xhtml#S114_49'>14. 49.</a></span></p></aside>
 <aside epub:type='footnote' id="FN208"><p class="f"><a class="notebackref" href="#R110_3"><span class="notemark">†</span> 10.3</a>
  <span class="ft">Heb. shooters with bows.</span></p></aside>
 <aside epub:type='footnote' id="FN209"><p class="f"><a class="notebackref" href="#R110_3"><span class="notemark">†</span> 10.3</a>
@@ -1608,7 +1608,7 @@
 <aside epub:type='footnote' id="FN227"><p class="f"><a class="notebackref" href="#R111_11"><span class="notemark">∥</span> 11.11</a>
  <span class="ft">Or, son of Hachmoni.</span></p></aside>
 <aside epub:type='footnote' id="FN228"><p class="f"><a class="notebackref" href="#R111_13"><span class="notemark">∥</span> 11.13</a>
- <span class="ft">Ephesdammim, <a href='EPH.xhtml#EP1_17'>1 Sam. 17</a>. <a href='EPH.xhtml#EP1_0'>1.</a></span></p></aside>
+ <span class="ft">Ephesdammim, 1 Sam. <a href='1SA.xhtml#S117_1'>17. 1.</a></span></p></aside>
 <aside epub:type='footnote' id="FN229"><p class="f"><a class="notebackref" href="#R111_14"><span class="notemark">∥</span> 11.14</a>
  <span class="ft">Or, stood.</span></p></aside>
 <aside epub:type='footnote' id="FN230"><p class="f"><a class="notebackref" href="#R111_14"><span class="notemark">*</span> 11.14</a>
@@ -1708,7 +1708,7 @@
 <aside epub:type='footnote' id="FN277"><p class="f"><a class="notebackref" href="#R113_13"><span class="notemark">†</span> 13.13</a>
  <span class="ft">Heb. removed.</span></p></aside>
 <aside epub:type='footnote' id="FN278"><p class="f"><a class="notebackref" href="#R113_14"><span class="notemark">*</span> 13.14</a>
- <span class="ft">chap. <a href='1CH.xhtml#R126_6'>26. 6</a>.</span></p></aside>
+ <span class="ft">chap. <a href='1CH.xhtml#R126_5'>26. 5</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN279"><p class="f"><a class="notebackref" href="#R114_1"><span class="notemark">*</span> 14.1</a>
  <span class="ft">2 Sam. <a href='2SA.xhtml#S25_11'>5. 11</a>, &amp;c.</span></p></aside>
 <aside epub:type='footnote' id="FN280"><p class="f"><a class="notebackref" href="#R114_3"><span class="notemark">†</span> 14.3</a>
@@ -1736,7 +1736,7 @@
 <aside epub:type='footnote' id="FN291"><p class="f"><a class="notebackref" href="#R115_17"><span class="notemark">*</span> 15.17</a>
  <span class="ft">ch. <a href='1CH.xhtml#R16_44'>6. 44</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN292"><p class="f"><a class="notebackref" href="#R115_21"><span class="notemark">∥</span> 15.21</a>
- <span class="ft">Or, on the eighth to oversec.</span></p></aside>
+ <span class="ft">Or, on the eighth to oversee.</span></p></aside>
 <aside epub:type='footnote' id="FN293"><p class="f"><a class="notebackref" href="#R115_22"><span class="notemark">∥</span> 15.22</a>
  <span class="ft">Or, was for the carriage: he instructed about the carriage.</span></p></aside>
 <aside epub:type='footnote' id="FN294"><p class="f"><a class="notebackref" href="#R115_22"><span class="notemark">†</span> 15.22</a>
@@ -1748,7 +1748,7 @@
 <aside epub:type='footnote' id="FN297"><p class="f"><a class="notebackref" href="#R116_1"><span class="notemark">*</span> 16.1</a>
  <span class="ft">2 Sam. <a href='2SA.xhtml#S26_17'>6. 17</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN298"><p class="f"><a class="notebackref" href="#R116_5"><span class="notemark">†</span> 16.5</a>
- <span class="ft">Heb. with instruments of psalleries and harps.</span></p></aside>
+ <span class="ft">Heb. with instruments of psalteries and harps.</span></p></aside>
 <aside epub:type='footnote' id="FN299"><p class="f"><a class="notebackref" href="#R116_8"><span class="notemark">*</span> 16.8</a>
  <span class="ft">Ps. <a href='PSA.xhtml#PS105_1'>105. 1</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN300"><p class="f"><a class="notebackref" href="#R116_16"><span class="notemark">*</span> 16.16</a>
@@ -1790,7 +1790,7 @@
 <aside epub:type='footnote' id="FN318"><p class="f"><a class="notebackref" href="#R117_27"><span class="notemark">∥</span> 17.27</a>
  <span class="ft">Or, it hath pleased thee.</span></p></aside>
 <aside epub:type='footnote' id="FN319"><p class="f"><a class="notebackref" href="#R118_1"><span class="notemark">*</span> 18.1</a>
- <span class="ft">2 Sam. <a href='2SA.xhtml#S23_1'>3. 1</a>, &amp;c.</span></p></aside>
+ <span class="ft">2 Sam. <a href='2SA.xhtml#S28_1'>8. 1</a>, &amp;c.</span></p></aside>
 <aside epub:type='footnote' id="FN320"><p class="f"><a class="notebackref" href="#R118_3"><span class="notemark">∥</span> 18.3</a>
  <span class="ft">2 Sam. <a href='2SA.xhtml#S28_3'>8. 3</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN321"><p class="f"><a class="notebackref" href="#R118_5"><span class="notemark">†</span> 18.5</a>
