--- a/final product/OEBPS/EZR.xhtml
+++ b/final product/OEBPS/EZR.xhtml
@@ -431,7 +431,7 @@
 <aside epub:type='footnote' id="FN35"><p class="f"><a class="notebackref" href="#ER2_69"><span class="notemark">*</span> 2.69</a>
  <span class="ft">1 Chr. <a href='1CH.xhtml#R126_20'>26. 20</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN36"><p class="f"><a class="notebackref" href="#ER3_2"><span class="notemark">∥</span> 3.2</a>
- <span class="ft">Joshua, <a href='JOS.xhtml#JS_1'>Hag. 1</a>. <a href='JOS.xhtml#JS1_0'>1.</a></span></p></aside>
+ <span class="ft">Joshua, Hag. <a href='HAG.xhtml#HG1_1'>1. 1.</a></span></p></aside>
 <aside epub:type='footnote' id="FN37"><p class="f"><a class="notebackref" href="#ER3_2"><span class="notemark">*</span> 3.2</a>
  <span class="ft">Matt. <a href='MAT.xhtml#MT1_12'>1 12</a>. &amp;c Luke <a href='LUK.xhtml#LK3_27'>3 27</a>, called Zorobabel.</span></p></aside>
 <aside epub:type='footnote' id="FN38"><p class="f"><a class="notebackref" href="#ER3_2"><span class="notemark">*</span> 3.2</a>
@@ -579,7 +579,7 @@
 <aside epub:type='footnote' id="FN109"><p class="f"><a class="notebackref" href="#ER8_27"><span class="notemark">†</span> 8.27</a>
  <span class="ft">Heb. desirable.</span></p></aside>
 <aside epub:type='footnote' id="FN110"><p class="f"><a class="notebackref" href="#ER9_5"><span class="notemark">∥</span> 9.5</a>
- <span class="ft">Or, afflication.</span></p></aside>
+ <span class="ft">Or, affliction.</span></p></aside>
 <aside epub:type='footnote' id="FN111"><p class="f"><a class="notebackref" href="#ER9_6"><span class="notemark">∥</span> 9.6</a>
  <span class="ft">Or, guiltiness</span></p></aside>
 <aside epub:type='footnote' id="FN112"><p class="f"><a class="notebackref" href="#ER9_8"><span class="notemark">†</span> 9.8</a>
